<resources>
    <string name="app_name">Abhigyaan</string>
    <string name="anubhav">ANUBHAV</string>
    <string name="hello_there_welcome_back">Hello there ,Welcome </string>
    <string name="todo">TODO</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="hello_welcome_back">Hello ,Welcome Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="or_sign_in_with">      or sign-in with</string>
    <string name="google">Google</string>
    <string name="newgoogle">Google</string>
    <string name="sign_up">sign up</string>
    <string name="or_else">or else  </string>
    <string name="sign_up2">sign up</string>
    <string name="sign_up3">sign up</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="phoneno">phoneno</string>
    <string name="anubhav_chourasia">Anubhav Chourasia</string>
    <string name="new_user_sign_up">NEW USER? SIGN UP</string>
    <string name="login_via_google">Login via Google</string>
    <string name="submit2">SUBMIT</string>
    <string name="about_abhigyaan">About Abhigyaan</string>
    <string name="feedback_page">Feedback Page</string>
    <string name="verticals">Verticals</string>
    <string name="sign_in_via_google">SIGN IN VIA GOOGLE</string>">
    <string name="client_id">AIzaSyC7BA7jSjxL4WASRlLcu5QG7OZKOik4bwI</string>
    <string name="_20">20</string>
    <string name="title_activity_evening_batch">evening_batch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="evening_batch">EVENING BATCH</string>
    <string name="welcome2">Welcome!</string>
    <string name="todod">TODO</string>
    <string name="title_activity_evening_batch2">EveningBatchActivity2</string>
    <string name="title_activity_evening_batch3">EveningBatchActivity3</string>
    <string name="title_activity_evening_batch4">EveningBatchActivity4</string>
    <string name="title_activity_project_disha4">ProjectDishaActivity4</string>
    <string name="title_activity_mess_batch4">MessBatchActivity4</string>
    <string name="title_activity_project_lamani4">ProjectLamaniActivity4</string>
    <string name="title_activity_english_batch4">EnglishBatchActivity4</string>
    <string name="members">members</string>
    <string name="title_activity_events1">eventsActivity1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_newhe">newhe</string>
    <string name="open">Open the drawer</string>
    <string name="close">Close the drawer</string>
    <string name="your_web_client_id">93553756518-pabvpnnrglcl9lsckn0bs028t0kblpu3.apps.googleusercontent.com</string>
    <string name="image">done</string>
</resources>