<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:transitionName="logo_image"
        android:contentDescription="@string/todo"
        android:src="@drawable/abhigyaan_logo" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/belleza"
        android:text="@string/hello_welcome_back"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bold"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:fontFamily="@font/antic"
        android:text="@string/sign_in_to_continue"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#757575"
                android:textStyle="bold"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app.endIconMode="password_toogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="#757575"
                android:textStyle="bold"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:fontFamily="@font/belleza"
            android:text="@string/forgot_password"
            android:textColor="#B71C1C"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/mainsubmit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:backgroundTint="#34563E"
            android:elevation="0dp"
            android:fontFamily="@font/belleza"
            android:text="SUBMIT"
            android:textColor="#FFFFFF"
            tools:ignore="RtlHardcoded" />






    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-25dp"
        android:padding="20dp">





        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:onClick="signup"

            android:background="#00000000"
            android:elevation="10dp"
            android:fontFamily="@font/belleza"
            android:text="@string/new_user_sign_up"
            android:textColor="@color/black"
            android:textStyle="bold"

            />





    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        >
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:text="@string/login_via_google"
            android:fontFamily="@font/belleza"
            android:textColor="@color/design_default_color_error"/>
    </LinearLayout>


    </LinearLayout>