<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="180dp"
    android:background="@drawable/evening"
    android:gravity="bottom"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ExtraText">
    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="40dp"
        android:layout_marginStart="10dp"
        android:elevation="0dp"
        android:backgroundTint="@color/material_dynamic_neutral_variant90">

        <ImageView
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:contentDescription="@string/todod"
            android:src="@drawable/eve"
            tools:ignore="ContentDescription" />



    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/welcome2"
        android:textColor="#020202"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/evening_batch"
        android:textColor="#120E08"
        android:textSize="34sp" />

</LinearLayout>